[gd_scene load_steps=66 format=3 uid="uid://ccxa7p87p2u60"]

[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉kifuwarabe_rpg/director.gd" id="1_wmnp6"]
[ext_resource type="Texture2D" uid="uid://bkfsr571tdwqf" path="res://🍋images/🪑grayscale/1280x720/grid.png" id="2_ivwoj"]
[ext_resource type="AudioStream" uid="uid://wtqqhswcs7ni" path="res://🍋audio_bgm/🪑sakuramaru/きふわらべファイター２.ogg" id="8_8nkdr"]
[ext_resource type="AudioStream" uid="uid://bcg0ntta7xh26" path="res://🍋audio_bgm/🪑maou_audio/maou_game_town05.ogg" id="9_o2byt"]
[ext_resource type="AudioStream" uid="uid://d356e6en335us" path="res://🍋audio_bgm/🪑maou_audio/maou_bgm_acoustic05.ogg" id="10_kiayq"]
[ext_resource type="AudioStream" uid="uid://efn4gabjs803" path="res://🍋audio_bgm/🪑maou_audio/maou_game_rock28.ogg" id="11_bfa2l"]
[ext_resource type="AudioStream" uid="uid://bgqqv0r1evda1" path="res://🍋audio_bgm/🪑maou_audio/maou_bgm_cyber06.ogg" id="12_xmpoe"]
[ext_resource type="AudioStream" uid="uid://cil7820mlikbo" path="res://🍋audio_bgm/🪑maou_audio/maou_bgm_neorock14.ogg" id="13_jnvqp"]
[ext_resource type="AudioStream" uid="uid://cgfwug3u405gx" path="res://🍋audio_bgm/🪑maou_audio/maou_bgm_orchestra12.ogg" id="14_vnt6y"]
[ext_resource type="AudioStream" uid="uid://c78m16nbbb3c" path="res://🍋audio_bgm/🪑maou_audio/maou_game_event17.ogg" id="15_2mye1"]
[ext_resource type="AudioStream" uid="uid://blnmvs8yao64s" path="res://🍋audio_bgm/🪑maou_audio/maou_bgm_cyber36.ogg" id="16_mkitb"]
[ext_resource type="AudioStream" uid="uid://bhjhqoh8swgni" path="res://🍋audio_se/🪑maou_audio/maou_se_sound17.ogg" id="17_ax3y8"]
[ext_resource type="AudioStream" uid="uid://dded01e4u8xny" path="res://🍋audio_se/🪑maou_audio/maou_se_sound19.ogg" id="18_nqc6o"]
[ext_resource type="AudioStream" uid="uid://d2he7oscflr6e" path="res://🍋audio_se/🪑maou_audio/maou_se_sound_switch02.ogg" id="19_0i743"]
[ext_resource type="AudioStream" uid="uid://rqttefw8debu" path="res://🍋audio_se/🪑maou_audio/maou_se_magic_fire11.ogg" id="20_i25bc"]
[ext_resource type="AudioStream" uid="uid://e0olmiofgu0i" path="res://🍋audio_se/🪑maou_audio/maou_se_sound_door02.ogg" id="21_iws6t"]
[ext_resource type="AudioStream" uid="uid://ca1bd4eif8lxj" path="res://🍋audio_se/🪑maou_audio/maou_se_system12.ogg" id="22_6ro2e"]
[ext_resource type="AudioStream" uid="uid://spjfguf4xfp" path="res://🍋audio_se/🪑maou_audio/maou_se_onepoint32.ogg" id="23_qpmbl"]
[ext_resource type="AudioStream" uid="uid://cdj5d7qvlq6cs" path="res://🍋audio_se/🪑maou_audio/maou_se_magic_fire09.ogg" id="24_gm8xc"]
[ext_resource type="Texture2D" uid="uid://dcao5gmtt113o" path="res://🍋images/🪑grayscale/1280x720/event_room.png" id="25_aycb2"]
[ext_resource type="Texture2D" uid="uid://rrmsl7vcm4c" path="res://🍋images/🪑grayscale/1280x720/in_front_of_sakiwaka_station.png" id="26_4dvmr"]
[ext_resource type="Texture2D" uid="uid://nkj3xedigtox" path="res://🍋images/🪑grayscale/1280x720/ending.png" id="27_gypff"]
[ext_resource type="Texture2D" uid="uid://b81tmjslp5ae6" path="res://🍋images/🪑grayscale/1280x720/map_arround_sakikawa_station.png" id="28_lwuey"]
[ext_resource type="Texture2D" uid="uid://dpc35dvufjgp4" path="res://🍋images/🪑grayscale/1280x720/kawahori_road.png" id="29_s5ma0"]
[ext_resource type="Texture2D" uid="uid://dii7tlfnq4rhb" path="res://🍋images/🪑grayscale/1280x720/tsutsuji_road.png" id="30_jo83x"]
[ext_resource type="Texture2D" uid="uid://dgxwlwrrmu7cs" path="res://🍋images/🪑grayscale/1280x720/battle_scene_3.png" id="31_3w7mi"]
[ext_resource type="Texture2D" uid="uid://brryggn3ofxsy" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_1.png" id="32_l43dy"]
[ext_resource type="Texture2D" uid="uid://c42aedfyn3ie3" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_2.png" id="33_63jpw"]
[ext_resource type="Texture2D" uid="uid://b70fphsmj0bku" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_3.png" id="34_x34j5"]
[ext_resource type="Texture2D" uid="uid://bw6jruqwbenlc" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_4.png" id="35_jcaiw"]
[ext_resource type="Texture2D" uid="uid://cot0sqrmfbptg" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_5.png" id="36_1keft"]
[ext_resource type="Texture2D" uid="uid://by1nkn5qeooys" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_6.png" id="37_tdxrv"]
[ext_resource type="Texture2D" uid="uid://d2twxf0e8dkj0" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_7.png" id="38_vlm38"]
[ext_resource type="Texture2D" uid="uid://df3qef2yydgfn" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_8.png" id="39_nr2kt"]
[ext_resource type="Texture2D" uid="uid://c5fbng1pd6rqf" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_9.png" id="40_25lxp"]
[ext_resource type="Texture2D" uid="uid://bhaal2avn26fq" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_10.png" id="41_j4orm"]
[ext_resource type="Texture2D" uid="uid://6xge0otbrnct" path="res://🍋images/🪑grayscale/1280x720/transition_1_frame_11.png" id="42_qrihd"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉kifuwarabe_visual_novel/programs_hub.gd" id="57_vx8va"]
[ext_resource type="PackedScene" path="res://downloads_from_🍉kifuwarabe_visual_novel/📂programmer_🎬Instructions_🍉kifuwarabe_visual_novel.tscn" id="58_sadl4"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉kifuwarabe_visual_novel/scenario_writer/reader.gd" id="59_02v4r"]
[ext_resource type="Texture2D" uid="uid://cku4ftrtyhnat" path="res://🍋images/🪑grayscale/1280x720/window_at_top_lerge.png" id="59_4vstx"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉kifuwarabe_rpg/scenario_writer/switch_department.gd" id="60_f7oqn"]
[ext_resource type="Texture2D" uid="uid://h40kir6k3rxw" path="res://🍋images/🪑grayscale/1280x720/window_at_bottom.png" id="60_ked68"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉kifuwarabe_visual_novel/scenario_writer/visual_novel_department.gd" id="61_bwjt1"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉kifuwarabe_visual_novel/🍱message_windows/message_windows_hub.gd" id="61_cfuy1"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉kifuwarabe_visual_novel/🍱message_windows/its_concrete.gd" id="61_tvkup"]
[ext_resource type="Texture2D" uid="uid://d1dltajd4gtjj" path="res://🍋images/🪑grayscale/1280x720/window_small_at_center.png" id="62_q6u17"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉kifuwarabe_visual_novel/scenario_writer/system_menu_department.gd" id="62_rwa4y"]
[ext_resource type="Texture2D" uid="uid://6eodi1kuyeqn" path="res://🍋images/🪑grayscale/1280x720/window_at_bottom_left.png" id="63_a2lr3"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉kifuwarabe_rpg/scenario_writer/battle_department.gd" id="63_rlfae"]
[ext_resource type="Script" path="res://🍋scripts/🪑grayscale_🍉kifuwarabe_rpg/scenario_writer/battle_accessor.gd" id="64_cxfyy"]
[ext_resource type="Texture2D" uid="uid://c6j864566m67c" path="res://🍋images/🪑grayscale/1280x720/window_middle_at_center.png" id="65_lhf23"]
[ext_resource type="Texture2D" uid="uid://bwg68n0qnvqvb" path="res://🍋images/🪑grayscale/0512x288/ShogiBan.png" id="66_5k2cc"]
[ext_resource type="Texture2D" uid="uid://dqxq5q0bpom30" path="res://🍋images/🪑grayscale/0512x288/file_and_rank.png" id="67_g74iy"]
[ext_resource type="Texture2D" uid="uid://cw3tbgchm8gja" path="res://🍋images/🪑grayscale/monster_faces/202310__godot__17-2213-hamu.png" id="68_8k378"]
[ext_resource type="Texture2D" uid="uid://cw21en50qu3xv" path="res://🍋images/🪑grayscale/monster_faces/202310__godot__19-2217--resapyonKaiFace.png" id="69_u1h4l"]
[ext_resource type="Texture2D" uid="uid://b5qm4euoaij5s" path="res://🍋images/🪑grayscale/monster_faces/202310__godot__19-2218--KodackFace.png" id="70_kltin"]
[ext_resource type="Texture2D" uid="uid://cowfeoii1wxo1" path="res://🍋images/🪑grayscale/monster_faces/202310__godot__17-2214-Kifuwarabe.png" id="71_cminn"]
[ext_resource type="Texture2D" uid="uid://b4s2drlxcic4g" path="res://🍋images/🪑grayscale/monster_faces/202310__godot__18-0039--shiroBeerFace.png" id="72_seukb"]
[ext_resource type="Texture2D" uid="uid://cdt5hnyr8emu1" path="res://🍋images/🪑grayscale/monsters/202310__godot__15-2317--Hamu.png" id="73_ran2h"]
[ext_resource type="Texture2D" uid="uid://cavm1ndrs74w1" path="res://🍋images/🪑grayscale/monsters/202310__godot__15-2226--resakai.png" id="74_64hjs"]
[ext_resource type="Texture2D" uid="uid://dovi8ulepkxf8" path="res://🍋images/🪑grayscale/monsters/202310__godot__15-2320--Kodack.png" id="75_j1pgv"]
[ext_resource type="Texture2D" uid="uid://dlhgydn0tvw10" path="res://🍋images/🪑grayscale/monsters/202310__godot__15-2339--Kifuwarabe.png" id="76_3ghif"]
[ext_resource type="Texture2D" uid="uid://dih8hkurgnfir" path="res://🍋images/🪑grayscale/monsters/202310__godot__18-0039--shiroBeer.png" id="77_hfxpa"]
[ext_resource type="LabelSettings" uid="uid://oqwf4pqavaql" path="res://🍋label_settings/🪑grayscale/battle_light_blue.tres" id="55_q5fb2"]
[ext_resource type="LabelSettings" uid="uid://b4h0mq5qymie" path="res://🍋label_settings/🪑grayscale/battle_light_green.tres" id="54_mtkqv"]
[ext_resource type="LabelSettings" uid="uid://dfrtn231ftwee" path="res://🍋label_settings/🪑grayscale/battle_light_red.tres" id="52_7d5u4"]
[ext_resource type="LabelSettings" uid="uid://kfn8wqyqjk4q" path="res://🍋label_settings/🪑grayscale/battle_light_yellow.tres" id="53_rwvbq"]
[ext_resource type="LabelSettings" uid="uid://cja1nflyxbgox" path="res://🍋label_settings/🪑grayscale/battle_slategray.tres" id="49_c6t67"]
[ext_resource type="LabelSettings" uid="uid://bngcpl7weake8" path="res://🍋label_settings/🪑grayscale/credits_roll.tres" id="45_k6jkg"]
[ext_resource type="LabelSettings" uid="uid://bxfp11qlgp84q" path="res://🍋label_settings/🪑grayscale/ending_end.tres" id="46_ooq6c"]
[ext_resource type="LabelSettings" uid="uid://dc5ae2mnxhltk" path="res://🍋label_settings/🪑grayscale/game_title.tres" id="43_phx2h"]
[ext_resource type="LabelSettings" uid="uid://dxnccgjo7wqga" path="res://🍋label_settings/🪑grayscale/game_title_copyright.tres" id="44_gnhe7"]
[ext_resource type="LabelSettings" uid="uid://b2nsvqfk7mk4y" path="res://🍋label_settings/🪑grayscale/large_font.tres" id="50_vvxcd"]
[ext_resource type="LabelSettings" uid="uid://m8dj47wqvbg7" path="res://🍋label_settings/🪑grayscale/main_medium.tres" id="51_2w4vw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_glhd8"]

[node name="Director" type="Node2D"]
material = SubResource("CanvasItemMaterial_glhd8")
script = ExtResource("1_wmnp6")

[node name="Grid" type="Sprite2D" parent="."]
visible = false
z_index = 5
position = Vector2(640, 360)
texture = ExtResource("2_ivwoj")

[node name="📂BackgroundArtist" type="Node2D" parent="."]

[node name="🗻４Ｆイベントルーム" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
position = Vector2(640, 360)
texture = ExtResource("25_aycb2")

[node name="🗻崎川駅前" type="Sprite2D" parent="📂BackgroundArtist"]
position = Vector2(640, 360)
texture = ExtResource("26_4dvmr")

[node name="🗻エンディング" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
position = Vector2(640, 360)
texture = ExtResource("27_gypff")

[node name="🗻崎川駅周辺地図" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
position = Vector2(640, 360)
texture = ExtResource("28_lwuey")

[node name="🗻川堀町線ロード" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
position = Vector2(640, 360)
texture = ExtResource("29_s5ma0")

[node name="🗻ツツジロード" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
position = Vector2(640, 360)
texture = ExtResource("30_jo83x")

[node name="🗻戦闘シーン" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
position = Vector2(640, 360)
texture = ExtResource("31_3w7mi")

[node name="🗻トランジション１コマ１" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("32_l43dy")

[node name="🗻トランジション１コマ２" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("33_63jpw")

[node name="🗻トランジション１コマ３" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("34_x34j5")

[node name="🗻トランジション１コマ４" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("35_jcaiw")

[node name="🗻トランジション１コマ５" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("36_1keft")

[node name="🗻トランジション１コマ６" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("37_tdxrv")

[node name="🗻トランジション１コマ７" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("38_vlm38")

[node name="🗻トランジション１コマ８" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("39_nr2kt")

[node name="🗻トランジション１コマ９" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("40_25lxp")

[node name="🗻トランジション１コマ１０" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("41_j4orm")

[node name="🗻トランジション１コマ１１" type="Sprite2D" parent="📂BackgroundArtist"]
visible = false
z_index = 900
position = Vector2(640, 360)
texture = ExtResource("42_qrihd")

[node name="📂GuiArtist_MessageWindows" type="Node2D" parent="."]
script = ExtResource("61_cfuy1")

[node name="■上_大" type="Sprite2D" parent="📂GuiArtist_MessageWindows"]
visible = false
position = Vector2(640, 360)
texture = ExtResource("59_4vstx")
script = ExtResource("61_tvkup")

[node name="■下" type="Sprite2D" parent="📂GuiArtist_MessageWindows"]
modulate = Color(1, 1, 1, 0.996078)
z_index = 1000
position = Vector2(640, 360)
texture = ExtResource("60_ked68")
script = ExtResource("61_tvkup")

[node name="■中央" type="Sprite2D" parent="📂GuiArtist_MessageWindows"]
visible = false
z_index = 1000
position = Vector2(640, 360)
texture = ExtResource("62_q6u17")
script = ExtResource("61_tvkup")

[node name="■左下" type="Sprite2D" parent="📂GuiArtist_MessageWindows"]
visible = false
modulate = Color(1, 1, 1, 0.996078)
z_index = 1000
position = Vector2(640, 360)
texture = ExtResource("63_a2lr3")
script = ExtResource("61_tvkup")

[node name="📂Illustrator" type="Node2D" parent="."]
visible = false

[node name="ーーーーウィンドウーーーー" type="Node" parent="📂Illustrator"]

[node name="🎴中央ウィンドウ" type="Sprite2D" parent="📂Illustrator"]
visible = false
z_index = 1000
position = Vector2(640, 360)
texture = ExtResource("65_lhf23")

[node name="ーーーーオブジェクトーーーー" type="Node" parent="📂Illustrator"]

[node name="🎴将棋盤" type="Sprite2D" parent="📂Illustrator"]
z_index = 100
position = Vector2(640, 272)
texture = ExtResource("66_5k2cc")

[node name="🎴ファイルとランク" type="Sprite2D" parent="📂Illustrator"]
z_index = 100
position = Vector2(640, 272)
texture = ExtResource("67_g74iy")

[node name="ーーーーモンスター全身ーーーー" type="Node" parent="📂Illustrator"]

[node name="🐕ヘム将棋" type="Sprite2D" parent="📂Illustrator"]
z_index = 10
position = Vector2(463, 325)
texture = ExtResource("73_ran2h")

[node name="🐕レサぽん改" type="Sprite2D" parent="📂Illustrator"]
visible = false
z_index = 10
position = Vector2(737, 271)
scale = Vector2(0.639706, 0.639706)
texture = ExtResource("74_64hjs")

[node name="🐕ケダック" type="Sprite2D" parent="📂Illustrator"]
visible = false
z_index = 10
position = Vector2(627, 319)
texture = ExtResource("75_j1pgv")

[node name="🐕きふわらべ" type="Sprite2D" parent="📂Illustrator"]
visible = false
z_index = 10
position = Vector2(1014, 273)
scale = Vector2(0.625506, 0.625506)
texture = ExtResource("76_3ghif")

[node name="🐕昼ビール" type="Sprite2D" parent="📂Illustrator"]
position = Vector2(735, 320)
scale = Vector2(0.596059, 0.596059)
texture = ExtResource("77_hfxpa")

[node name="ーーーーモンスター顔ーーーー" type="Node" parent="📂Illustrator"]

[node name="😁ヘム将棋" type="Sprite2D" parent="📂Illustrator"]
visible = false
position = Vector2(97, 70)
scale = Vector2(0.266871, 0.266871)
texture = ExtResource("68_8k378")

[node name="😁レサぽん改" type="Sprite2D" parent="📂Illustrator"]
visible = false
position = Vector2(94.5, 64.9293)
scale = Vector2(0.191919, 0.191919)
texture = ExtResource("69_u1h4l")

[node name="😁ケダック" type="Sprite2D" parent="📂Illustrator"]
position = Vector2(96.4521, 67.25)
scale = Vector2(0.80137, 0.80137)
texture = ExtResource("70_kltin")

[node name="😁きふわらべ" type="Sprite2D" parent="📂Illustrator"]
position = Vector2(97, 129)
scale = Vector2(0.1875, 0.1875)
texture = ExtResource("71_cminn")

[node name="😁昼ビール" type="Sprite2D" parent="📂Illustrator"]
visible = false
position = Vector2(97.5, 66.525)
scale = Vector2(0.221014, 0.197109)
texture = ExtResource("72_seukb")

[node name="📂Musician_BGM" type="Node" parent="."]

[node name="ーーーーきふわらべRPGーーーー" type="Node" parent="📂Musician_BGM"]

[node name="🎵きふわらべファイター２" type="AudioStreamPlayer" parent="📂Musician_BGM"]
stream = ExtResource("8_8nkdr")
volume_db = -20.0

[node name="🎵タイトル" type="AudioStreamPlayer" parent="📂Musician_BGM"]
stream = ExtResource("9_o2byt")
volume_db = -20.0

[node name="🎵エンディング" type="AudioStreamPlayer" parent="📂Musician_BGM"]
stream = ExtResource("10_kiayq")
volume_db = -15.0

[node name="🎵バトル１" type="AudioStreamPlayer" parent="📂Musician_BGM"]
stream = ExtResource("11_bfa2l")
volume_db = -15.0

[node name="🎵バトル２" type="AudioStreamPlayer" parent="📂Musician_BGM"]
stream = ExtResource("12_xmpoe")
volume_db = -15.0

[node name="🎵バトル３" type="AudioStreamPlayer" parent="📂Musician_BGM"]
stream = ExtResource("13_jnvqp")
volume_db = -15.0

[node name="🎵バトル４" type="AudioStreamPlayer" parent="📂Musician_BGM"]
stream = ExtResource("14_vnt6y")
volume_db = -15.0

[node name="🎵負け" type="AudioStreamPlayer" parent="📂Musician_BGM"]
stream = ExtResource("15_2mye1")
volume_db = -15.0

[node name="ーーーーキーコンフィグーーーー" type="Node" parent="📂Musician_BGM"]

[node name="🎵キーコンフィグ" type="AudioStreamPlayer" parent="📂Musician_BGM"]
stream = ExtResource("16_mkitb")
volume_db = -20.0
pitch_scale = 1.4

[node name="📂Musician_SE" type="Node" parent="."]

[node name="ーーーーきふわらべRPGーーーー" type="Node" parent="📂Musician_SE"]

[node name="🔔ページめくり音" type="AudioStreamPlayer" parent="📂Musician_SE"]
stream = ExtResource("17_ax3y8")

[node name="🔔選択肢カーソル移動音" type="AudioStreamPlayer" parent="📂Musician_SE"]
stream = ExtResource("18_nqc6o")
volume_db = -15.0

[node name="🔔選択肢確定音" type="AudioStreamPlayer" parent="📂Musician_SE"]
stream = ExtResource("19_0i743")
volume_db = -10.0

[node name="🔔エンカウント音" type="AudioStreamPlayer" parent="📂Musician_SE"]
stream = ExtResource("20_i25bc")
volume_db = -15.0
pitch_scale = 1.5

[node name="ーーーーキーコンフィグーーーー" type="Node" parent="📂Musician_SE"]

[node name="🔔キーコンフィグ受入音" type="AudioStreamPlayer" parent="📂Musician_SE"]
stream = ExtResource("21_iws6t")
volume_db = -5.0

[node name="🔔キーコンフィグ取消音" type="AudioStreamPlayer" parent="📂Musician_SE"]
stream = ExtResource("22_6ro2e")
volume_db = -10.0

[node name="🔔キーコンフィグ不可音" type="AudioStreamPlayer" parent="📂Musician_SE"]
stream = ExtResource("23_qpmbl")
volume_db = -15.0

[node name="🔔キーコンフィグ完了音" type="AudioStreamPlayer" parent="📂Musician_SE"]
stream = ExtResource("24_gm8xc")
volume_db = -15.0

[node name="📂Programmer" type="Node" parent="."]

[node name="🛩️ProgramsHub" type="Node" parent="📂Programmer"]
script = ExtResource("57_vx8va")

[node name="🍱Instructions_🍉KifuwarabeVisualNovel" parent="📂Programmer" instance=ExtResource("58_sadl4")]

[node name="📂ScenarioWriter" type="Node" parent="."]

[node name="System" type="Node" parent="📂ScenarioWriter"]

[node name="Reader" type="Node" parent="📂ScenarioWriter/System"]
script = ExtResource("59_02v4r")

[node name="SwitchDepartment" type="Node" parent="📂ScenarioWriter"]
script = ExtResource("60_f7oqn")

[node name="📗ビジュアルノベル部門" type="Node" parent="📂ScenarioWriter"]
script = ExtResource("61_bwjt1")

[node name="📗システムメニュー部門" type="Node" parent="📂ScenarioWriter"]
script = ExtResource("62_rwa4y")

[node name="📗バトル部門" type="Node" parent="📂ScenarioWriter"]
script = ExtResource("63_rlfae")

[node name="Accessor" type="Node" parent="📂ScenarioWriter/📗バトル部門"]
script = ExtResource("64_cxfyy")















[node name="📂TelopCoordinator" type="CanvasLayer" parent="."]

[node name="ーーーーきふわらべRPGーーーー" type="Node" parent="📂TelopCoordinator"]




[node name="Ｔタイトル" type="CanvasLayer" parent="📂TelopCoordinator"]

[node name="きふわらべRPG" type="Label" parent="📂TelopCoordinator/Ｔタイトル"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -232.0
offset_right = 512.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
text = "きふわらべＲＰＧ"
label_settings = ExtResource("43_phx2h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Copyright" type="Label" parent="📂TelopCoordinator/Ｔタイトル"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -639.0
offset_top = 305.0
offset_right = 637.0
offset_bottom = 356.0
grow_horizontal = 2
grow_vertical = 2
text = "(C) 2023 同人サークルぐれーすけーる／むずでょ　音楽：(C) 魔王魂, 桜丸"
label_settings = ExtResource("44_gnhe7")
horizontal_alignment = 1
vertical_alignment = 1

