# ãƒ—ãƒ­ã‚°ãƒ©ãƒ ãƒ»ãƒãƒ–ï¼ˆProgram Hubï¼›ãƒ—ãƒ­ã‚°ãƒ©ãƒ ã®ä¸­å¿ƒåœ°ï¼‰
extends Node


# å…¨è§’æ•°å­—
var zenkaku_numbers = ["ï¼", "ï¼‘", "ï¼’", "ï¼“", "ï¼”", "ï¼•", "ï¼–", "ï¼—", "ï¼˜", "ï¼™"]


# ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼
# ãƒ‘ã‚¹é–¢é€£
# ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼


# ç›£ç£å–å¾—
func get_director():
	return $"../../../Director"


# ã‚·ãƒŠãƒªã‚ªãƒ©ã‚¤ã‚¿ãƒ¼å–å¾—
func get_scenario_writer():
	return self.get_director().get_node("ğŸ“‚ScenarioWriter")


# ã‚·ãƒŠãƒªã‚ªãƒ»ãƒªãƒ¼ãƒ€ãƒ¼å–å¾—
func get_scenario_reader():
	return self.get_scenario_writer().get_node("System/Reader")


# BGMå–å¾—
func get_bgm():
	return self.get_director().get_node("ğŸ“‚Musician_BGM")


# åŠ¹æœéŸ³å–å¾—
func get_se():
	return self.get_director().get_node("ğŸ“‚Musician_SE")


# èƒŒæ™¯ã‚¢ãƒ¼ãƒ†ã‚£ã‚¹ãƒˆ
func get_background_artist():
	return self.get_director().get_node("ğŸ“‚BackgroundArtist")


# ã‚¤ãƒ©ã‚¹ãƒˆãƒ¬ãƒ¼ã‚¿ãƒ¼å–å¾—
func get_illustrator():
	return self.get_director().get_node("ğŸ“‚Illustrator")


# ãƒ†ãƒ­ãƒƒãƒ—ãƒ»ã‚³ãƒ¼ãƒ‡ã‚£ãƒãƒ¼ã‚¿ãƒ¼å–å¾—
func get_telop_coordinator():
	return self.get_director().get_node("ğŸ“‚TelopCoordinator")


# ãƒ¢ãƒ³ã‚¹ã‚¿ãƒ¼ã®å…¨èº«åƒ
func get_monster_whole_body():
	return self.get_director().get_node("MonsterTrainer/WholeBody")


# ãƒ¢ãƒ³ã‚¹ã‚¿ãƒ¼ãƒ»ãƒ•ã‚§ãƒ¼ã‚¹ã‚º
func get_monster_faces():
	return self.get_director().get_node("MonsterTrainer/Faces")


# å‘½ä»¤ãƒãƒ¼ãƒ‰å–å¾—
func get_instruction(instruction_name):
	return $"../ğŸ±Instructions_ğŸ‰KifuwarabeVisualNovel".get_node(instruction_name)



# ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼
# ãã®ä»–
# ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼ãƒ¼


# å¤‰æ•°å±•é–‹ã™ã‚‹
# `target_before_change` - ï¼‘è¡Œã‹ã‚‚ã—ã‚Œãªã„ã—ã€æ®µè½ã‹ã‚‚ã—ã‚Œãªã„ã—ã€åŒ¿åé–¢æ•°ã‹ã‚‚ã—ã‚Œãªã„
func expand_variables(target_before_change):
	
	target_before_change = target_before_change.strip_edges()
		
	if target_before_change is String:
		# ã“ã“ã§ `{{banana}} ãªã©ã®å¼•æ•°ã‚’ã€€å¤‰æ•°å±•é–‹ã—ãŸã„
		
		# ç„¡é™ã«å¤‰æ•°å±•é–‹ã™ã‚‹ã“ã¨ã‚’é˜²ããŸã‚ã€å¤‰æ›å‰æ–‡å­—åˆ—ã¨ã€å¤‰æ›å¾Œæ–‡å­—åˆ—ã¯åˆ¥é€”ç”¨æ„ã™ã‚‹
		var terget_after_change = ""
				
		var from = 0
		
		while from < target_before_change.length():
			var open_index = target_before_change.find("{{", from)
			var close_index = target_before_change.find("}}", from)
			
			if from <= open_index and open_index + 2 < close_index:

				# Head
				terget_after_change += target_before_change.substr(from, open_index - from)

				# å¤‰æ•°åå–å¾—
				var key = target_before_change.substr(open_index + 2, close_index - (open_index + 2))
				print("ï¼»åŠ©ç›£ã€€å¤‰æ•°å±•é–‹ï¼½ã€€å¤‰æ•°ã‚­ãƒ¼ï¼šï¼»" + key + "ï¼½")
				
				if key in self.get_director().stage_directions_variables:
					var value = self.get_director().stage_directions_variables[key]
					print("ï¼»åŠ©ç›£ã€€å¤‰æ•°å±•é–‹ï¼½ã€€å¤‰æ•°å€¤ï¼šï¼»" + value + "ï¼½")
				
					terget_after_change += value
				
				else:
					print("ï¼»åŠ©ç›£ã€€å¤‰æ•°å±•é–‹ï¼½ã€€å¤‰æ•°å€¤ãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“")
					
					# ä»•æ–¹ãªã„ã®ã§ã€ã‚«ãƒƒã‚³æ‚ªã„ãŒã€ã‚­ãƒ¼ï¼ˆãƒãƒ³ãƒ‰ãƒ«ãƒãƒ¼ï¼‰ã‚’ç”»é¢ã«è¡¨ç¤ºã™ã‚‹
					terget_after_change += "{{" + key + "}}"

				from = close_index + 2
		
			else:
				#print("ï¼»åŠ©ç›£ã€€å¤‰æ•°å±•é–‹ï¼½ã€€å¯¾è±¡ãªã—ã€€æ®µè½ï¼šï¼»" + target_before_change + "ï¼½")
				terget_after_change += target_before_change.substr(from)
				break

		return terget_after_change
	
	else:
		#print("ï¼»åŠ©ç›£ã€€å¤‰æ•°å±•é–‹ï¼½ã€€å¯¾è±¡ãªã—ã€€éãƒ†ã‚­ã‚¹ãƒˆ")
		return target_before_change


# ï¼‘ç•ªå¤–å´ã§ãƒ€ãƒ–ãƒ«ã‚¯ã‚©ãƒ¼ãƒ†ãƒ¼ã‚·ãƒ§ãƒ³ãŒæŒŸã‚“ã§ã„ã‚Œã°ã€ãã®ãƒ€ãƒ–ãƒ«ã‚¯ã‚©ãƒ¼ãƒ†ãƒ¼ã‚·ãƒ§ãƒ³ã‚’å¤–ã—ã¾ã™
func trim_double_quotation(line):
	if 2 <= line.length() and line[0]=="\"" and line[-1]=="\"":
		return line.substr(1, line.length()-2)
	
	return line


# å…ˆé ­è¡Œã¨ã€ãã‚Œä»¥å¤–ã«åˆ†ã‘ã¾ã™ã€‚ã§ããªã‘ã‚Œã°ãƒŒãƒ«
func split_head_line_or_tail(text):
	# æœ€åˆã®æ”¹è¡Œã‚’è¦‹ã¤ã‘ã‚‹
	var index = text.find("\n")
	
	if index < 0:
		return null
	
	var head = text.substr(0, index)
	var tail = text.substr(index+1)
	# print("ï¼»åŠ©ç›£ï¼½ã€€headï¼šã€€[" + head + "]")
	# print("ï¼»åŠ©ç›£ï¼½ã€€tailï¼šã€€[" + tail + "]")
	return [head, tail]


# æ•°å€¤ã‚’å…¨è§’ãƒ†ã‚­ã‚¹ãƒˆã«å¤‰æ›
func number_to_zenkaku_text(number, figures):
	var zenkaku_text = ""
	
	while 0 < number:
		var zenkaku_num = self.zenkaku_numbers[number % 10]
		number /= 10
		
		zenkaku_text = zenkaku_num + zenkaku_text
	
	# å·¦å´ã«å…¨è§’ç©ºç™½ã‚’è©°ã‚ã‚‹
	var spaces = figures - zenkaku_text.length()
	for i in range(spaces):
		zenkaku_text = "ã€€" + zenkaku_text
		
	return zenkaku_text


# ã‚·ãƒŠãƒªã‚ªã®ç¾åœ¨ã‚»ã‚¯ã‚·ãƒ§ãƒ³é…åˆ—ã®ã‚µã‚¤ã‚ºã‚’è¿”ã™
func get_current_section_size_of_scenario():
	var snapshot = self.get_director().get_current_snapshot()	
	var scenario_node_name = snapshot.name
	var section_name =  snapshot.section_name
	
	var section_array = self.get_scenario_reader().get_section_array(scenario_node_name, section_name)
	return section_array.size()


# ã‚·ãƒŠãƒªã‚ªã®ç¾åœ¨ãƒ‘ãƒ©ã‚°ãƒ©ãƒ•ï¼ˆã‚»ã‚¯ã‚·ãƒ§ãƒ³ã®ã‚¢ã‚¤ãƒ†ãƒ ï¼‰ã‚’è¿”ã™
func get_current_paragraph_of_scenario():
	var snapshot = self.get_director().get_current_snapshot()
	var message_window_gui = self.get_director().get_current_message_window_gui()

	return self.get_scenario_writer().get_node(str(snapshot.name)).document[snapshot.section_name][message_window_gui.section_item_index]


# ã€ŒÂ§ã€ã‚»ã‚¯ã‚·ãƒ§ãƒ³ã®å†ç”Ÿ
func play_section():
	var snapshot = self.get_director().get_current_snapshot()
	var message_window_gui = self.get_director().get_current_message_window_gui()

	# å…¨éƒ¨æ¶ˆåŒ–æ¸ˆã¿ã®å ´åˆ
	if self.get_current_section_size_of_scenario() <= message_window_gui.section_item_index:
		print("ï¼»åŠ©ç›£ï¼½ï¼ˆ" + snapshot.name + "ã€€" + snapshot.section_name + "ï¼‰ã€€ã‚»ã‚¯ã‚·ãƒ§ãƒ³ã‚’èª­ã¿çµ‚ã‚ã£ã¦ã„ã‚‹")

		# ã‹ã¤ã€ã‚³ãƒ³ãƒ—ãƒªãƒ¼ãƒˆä¸­ã®å ´åˆã€ãƒ¦ãƒ¼ã‚¶ãƒ¼å…¥åŠ›ã‚’å¾…ã¤
		if message_window_gui.statemachine_of_message_window.is_completed():
			print("ï¼»åŠ©ç›£ï¼½ï¼ˆ" + snapshot.name + "ã€€"+ snapshot.section_name + "ï¼‰ã€€å…¨æ¶ˆåŒ–æ¸ˆã¿ã ãŒã€ã‚³ãƒ³ãƒ—ãƒªãƒ¼ãƒˆä¸­ã ã‹ã‚‰ã€å‹æ‰‹ã«ä½•ã‚‚ã—ãªã„ã€‚ãƒ¦ãƒ¼ã‚¶ãƒ¼å…¥åŠ›ã‚’å¾…ã¤")
			# è‡ªå‹•ã§ä½•ã‹ã—ãªã„
			return

	# ãƒ‘ãƒ¼ã‚¹ã‚’é–‹å§‹ã—ã¦ã‚ˆããªã„ã‚±ãƒ¼ã‚¹ã‚‚ã‚ã‚‹ãŒï¼Ÿ
	# ãƒãƒƒãƒ•ã‚¡ãƒ¼ãŒæ®‹ã£ã¦ã‚‹ã¨ãã¨ã‹
	if not message_window_gui.has_text_block_buffer():
		# Completed æ™‚ã‚‚ãƒ‘ãƒ¼ã‚¹å§‹ã‚ãŸã‚‰ã‚ˆããªã„
		if not message_window_gui.statemachine_of_message_window.is_completed():
			# TODO é¸æŠè‚¢ã®ã¨ãã‚‚ã‚„ã‚„ã“ã—ã„ãŒ
			print("ï¼»åŠ©ç›£ï¼½ï¼ˆ" + snapshot.name + "ã€€"+ snapshot.section_name + "ï¼‰ã€€ãƒ‘ãƒ¼ã‚¹ã‚’é–‹å§‹ã—ã¦ã‚ˆã„ï¼ˆæœ¬å½“ã‹ï¼Ÿï¼‰")
			# ãƒ‘ãƒ¼ã‚¹ã‚’é–‹å§‹ã—ã¦ã‚ˆã„
			snapshot.set_parse_lock(false)


# ä¼è¨€çª“ã§é¸æŠè‚¢ãŒé¸ã°ã‚ŒãŸã¨ãã€ãã®è¡Œç•ªå·ãŒæ¸¡ã•ã‚Œã¦ãã‚‹
func on_choice_selected(row_number):
	print("ï¼»åŠ©ç›£ï¼½ã€€é¸æŠè‚¢ã‚’ç¢ºå®šã•ã›ãŸ")

	# ä¼è¨€çª“ã®çŠ¶æ…‹é·ç§»
	#	ãšã£ã¨ Completed ã ã¨ã€å›°ã‚‹ã‹ã‚‰
	print("ï¼»åŠ©ç›£ï¼½ã€€ä¼è¨€çª“ã‚’ã€€ã‚ªãƒ¼ãƒ«ãƒ»ãƒšãƒ¼ã‚¸ã‚ºãƒ»ãƒ•ãƒ©ãƒƒã‚·ãƒ¥ãƒ‰ã€€ã™ã‚‹")
	self.get_director().get_current_message_window_gui().statemachine_of_message_window.all_pages_flushed()


	var snapshot = self.get_director().get_current_snapshot()
	var department_name = str(snapshot.name)
	var section_name = snapshot.section_name
	
	print("ï¼»åŠ©ç›£ï¼½ã€€ç¾åœ¨ã®éƒ¨é–€åã€€ã€€ã€€ï¼š" + department_name)
	print("ï¼»åŠ©ç›£ï¼½ã€€ç¾åœ¨ã®åŒºç”»åã€€ã€€ã€€ï¼š" + section_name)
	print("ï¼»åŠ©ç›£ï¼½ã€€é¸ã‚“ã é¸æŠè‚¢è¡Œç•ªå·ï¼š" + str(row_number))

	# ã‚·ãƒŠãƒªã‚ªãƒ»ãƒãƒ¼ãƒ‰
	var scenario_node = self.get_scenario_writer().get_node(department_name)

	# åŒºç”»åã€‚å®Ÿè³ªçš„ã«ã¯é¸æŠè‚¢ã®é…åˆ—
	var section_obj = scenario_node.choices_mappings[section_name]

	# æ¬¡ã®ã‚»ã‚¯ã‚·ãƒ§ãƒ³å
	var next_section_name = section_obj[row_number]
	print("ï¼»åŠ©ç›£ï¼½ã€€æ¬¡ã®åŒºç”»åã€€ã€€ã€€ã€€ï¼š" + next_section_name)
	
	self.get_director().set_current_section(next_section_name)
	self.play_section()


# ãƒ‘ãƒ©ã‚°ãƒ©ãƒ•ï¼ˆã‚»ã‚¯ã‚·ãƒ§ãƒ³ã®ã‚¢ã‚¤ãƒ†ãƒ ï¼‰ãŒï¼»ãƒˆæ›¸ãï¼½ã‹ã€ï¼»å°è©ï¼½ã‹ã€ã«ã‚ˆã£ã¦å‡¦ç†ã‚’åˆ†ã‘ã¾ã™
func parse_paragraph(paragraph_text):
	
	# ï¼»ãƒˆæ›¸ãï¼½ã‹ã©ã†ã‹åˆ¤å®š
	var first_head_tail = self.split_head_line_or_tail(paragraph_text)
	var first_head = first_head_tail[0].strip_edges()
	var first_tail = first_head_tail[1] 
	
	# ï¼»ãƒˆæ›¸ãï¼½
	# `.strip_edges()` - å…ˆé ­è¡Œã®æœ€åˆã¨ã€æœ€çµ‚è¡Œã®æœ€å¾Œã®è¡¨ç¤ºã•ã‚Œãªã„æ–‡å­—ã‚’æ¶ˆå»
	if first_head.strip_edges() == "!":
		print("ï¼»åŠ©ç›£ï¼½ã€€å‘½ä»¤ãƒ†ã‚­ã‚¹ãƒˆã ï¼š[" + first_tail + "]")

		# ã•ã‚‰ã«å…ˆé ­è¡Œã‚’å–å¾—
		var second_head_tail = self.split_head_line_or_tail(first_tail)
		
		while second_head_tail != null:
			var second_head = second_head_tail[0].strip_edges()
			var second_tail = second_head_tail[1]
			# print("ï¼»åŠ©ç›£ï¼½ã€€second_headï¼š[" + second_head + "]")
			# print("ï¼»åŠ©ç›£ï¼½ã€€second_tailï¼š[" + second_tail + "]")

			# ä»¥ä¸‹ã®å‘½ä»¤ã¯ã€ã‚¢ãƒ«ãƒ•ã‚¡ãƒ™ãƒƒãƒˆé †ã§ä¸¦ã¹ã¦ã‚ã‚‹
			#
			# ã‚³ãƒ¡ãƒ³ãƒˆ
			if second_head.begins_with("#"):
				pass
				
			# èƒŒæ™¯åˆ‡æ›¿
			elif second_head.begins_with("bg:"):
				self.get_instruction("Bg").do_it(second_head)

			# ï¼¢ï¼§ï¼­å†ç”Ÿï¼åœæ­¢
			elif second_head.begins_with("bgm:"):
				self.get_instruction("Bgm").do_it(second_head)
			
			# é¸æŠè‚¢ã‹ã©ã†ã‹åˆ¤å®š
			elif second_head.begins_with("choice:"):
				self.get_instruction("Choice").do_it(second_head)

			# éƒ¨é–€å¤‰æ›´
			elif second_head.begins_with("department:"):
				self.get_instruction("Department").do_it(second_head)
				
			# æ¬¡ã®ã‚»ã‚¯ã‚·ãƒ§ãƒ³ã¸é£›ã¶
			elif second_head.begins_with("goto:"):
				self.get_instruction("Goto").do_it(second_head)

			# ç”»åƒã‚’è¡¨ç¤ºã™ã‚‹
			elif second_head.begins_with("img:"):
				self.get_instruction("Img").do_it(second_head)

			# ãƒ©ãƒ™ãƒ«è¨­å®š
			elif second_head.begins_with("label:"):
				self.get_instruction("Label").do_it(second_head)
			
			# ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ãƒ»ã‚¹ãƒ”ãƒ¼ãƒ‰å¤‰æ›´
			elif second_head.begins_with("msg_speed:"):
				self.get_instruction("MsgSpeed").do_it(second_head)

			# ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸å‡ºåŠ›å…ˆã‚¦ã‚£ãƒ³ãƒ‰ã‚¦å¤‰æ›´
			elif second_head.begins_with("m_wnd:"):
				self.get_instruction("MWnd").do_it(second_head)

			# ã‚¢ãƒ—ãƒªã‚±ãƒ¼ã‚·ãƒ§ãƒ³çµ‚äº†
			elif second_head.begins_with("quit:"):
				self.get_instruction("Quit").do_it(second_head)
			
			# åŠ¹æœéŸ³
			elif second_head.begins_with("se:"):
				self.get_instruction("Se").do_it(second_head)

			# ã‚¹ãƒªãƒ¼ãƒ—
			elif second_head.begins_with("sleep:"):
				self.get_instruction("Sleep").do_it(second_head)

			# ãƒ†ãƒ­ãƒƒãƒ—ã®è¡¨ç¤ºï¼éè¡¨ç¤º
			elif second_head.begins_with("telop:"):
				self.get_instruction("Telop").do_it(second_head)
			
			# å¤‰æ•°ã‚»ãƒƒãƒˆ
			elif second_head.begins_with("var:"):
				self.get_instruction("Var").do_it(second_head)

			# ã•ã‚‰ã«å…ˆé ­è¡Œã‚’å–å¾—
			second_head_tail = split_head_line_or_tail(second_tail)

		#	ï¼»ãƒˆæ›¸ãï¼½çµ‚ã‚ã‚Š
		return

	var message_window_gui = self.get_director().get_current_message_window_gui()

	# é¸æŠè‚¢ã 
	if message_window_gui.choices_row_numbers != null:
		self.get_instruction("NormalTextChoice").do_it(paragraph_text)
		return

	# print("ï¼»åŠ©ç›£ï¼½ã€€é¸æŠè‚¢ã§ã¯ãªã„")
	self.get_instruction("NormalText").do_it(paragraph_text)


# ãƒ‡ã‚£ãƒ¬ã‚¯ã‚¿ãƒ¼ã® `_process(delta)` ãŒå‘¼å‡ºã™
func on_process(delta):

	if 0.0 < self.get_director().sleep_seconds:
		self.get_director().sleep_seconds -= delta

		# ç–‘ä¼¼ã‚¹ãƒªãƒ¼ãƒ—å€¤ãŒæ®‹ã£ã¦ã„ã‚‹é–“ã¯ã€ã‚·ãƒŠãƒªã‚ªã‚’é€²ã‚ã¾ã›ã‚“
		return

	var snapshot = self.get_director().get_current_snapshot()
	var message_window_gui = self.get_director().get_current_message_window_gui()

	# ãƒ‘ãƒ¼ã‚¹ã‚’é–‹å§‹ã—ã¦ã‚ˆã„ã‹ï¼Ÿï¼ˆã“ã“ã§å¾…æ©Ÿã—ãªã„ã¨ã€ä¸€ç¬ã§å…¨éƒ¨æ¶ˆåŒ–ã—ã¦ã—ã¾ã†ï¼‰
	if not snapshot.is_parse_lock():
		
		# ã¾ã ã‚ã‚‹ã‚ˆ
		if message_window_gui.section_item_index < self.get_current_section_size_of_scenario():
		
			# ç¾åœ¨ã®ã‚·ãƒŠãƒªã‚ªã®æ¬¡ã®ãƒ‘ãƒ©ã‚°ãƒ©ãƒ•ã‚’å–å¾—
			var paragraph = self.get_current_paragraph_of_scenario()

			# ã‚«ã‚¦ãƒ³ãƒˆã‚¢ãƒƒãƒ—
			message_window_gui.section_item_index += 1
			
			if paragraph is String:
				
				var latest_message = paragraph + ""	# æ–‡å­—åˆ—ã‚’å‚ç…§ã§ã¯ãªãã€ã‚³ãƒ”ãƒ¼ã—ãŸã„

				# ã“ã“ã§ã€å‘½ä»¤ã¨ã€å°è©ã¯åŒºåˆ¥ã™ã‚‹
				self.parse_paragraph(latest_message)
			
			else:
				# TODO æ–‡å­—åˆ—ä»¥å¤–ã®ãƒ‘ãƒ©ã‚°ãƒ©ãƒ•ã«å¯¾å¿œã—ãŸã„
				print("ï¼»åŠ©ç›£ï¼½ã€€TODO åŒ¿åé–¢æ•°ã‹ã‚‚ã—ã‚Œãªã„å‘¼å‡ºã—ã¦ã¿ã‚ˆ")
				paragraph.call()

		# ã‚‚ã†ç„¡ã„ã‚ˆ
		else:
			if not self.get_director().get_current_message_window_gui().statemachine_of_message_window.is_none():
				# ä¼è¨€çª“ã‚’é–‰ã˜ã‚‹
				self.get_director().get_current_message_window_gui().statemachine_of_message_window.all_pages_flushed()
